manifests/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-k8s-svc-obj
  namespace: todo-app
  labels:
    app: todo-app-k8s-svc-label
    facing: frontend
spec:
  type: ClusterIP
  selector:
    app: todo-app-k8s-pod-label
    facing: frontend
  ports:
    - name: app-svc
      port: 80
      protocol: TCP
      targetPort: 3000
