manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-k8s-ingress-obj
  namespace: todo-app
spec:
  rules:
    - host: todo-app.mine
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: todo-app-k8s-svc-obj
                port:
                  number: 80
